# bar

./: .gitignore  ChangeLog  Jenkinsfile  Makefile.in  README.md  ToDo  build.sh  configure  configure.ac  download-third-party-packages.sh  epm.list.in  errors.def  errors.pl  version  win32.sh
bar/: .svnignore  ChangeLog  Makefile  Makefile.in  README  ToDo  archive.c  archive.h  archive_create.c  archive_format.def  archive_format.pl  archive_list.c  archive_restore.c  archives.c  archives.h  arrays.c  arrays.h  bar-index.c  bar-keygen.in  bar.c  bar.cfg  bar.h  bar_common.c  bar_common.h  bar_global.h  barcontrol.tcl  build.sh  chunks.c  chunks.h  cmdoptions.c  cmdoptions.h  commands_compare.c  commands_compare.h  commands_convert.c  commands_convert.h  commands_create.c  commands_create.h  commands_list.c  commands_list.h  commands_restore.c  (+106 more)
bar/archive/: index2.sql  index7.sql
bar/bar/: Makefile.in  archive.c  archive.h  archive_format.def  archive_format.pl  arrays.c  arrays.h  autofree.c  autofree.h  bar-keygen.in  bar-minidump.cc  bar-sqlite3.c  bar.c  bar.cfg  bar.h  bar_global.h  bitmaps.c  bitmaps.h  chunks.c  chunks.h  cmdoptions.c  cmdoptions.h  commands_compare.c  commands_compare.h  commands_convert.c  commands_convert.h  commands_create.c  commands_create.h  commands_list.c  commands_list.h  commands_restore.c  commands_restore.h  commands_test.c  commands_test.h  compress.c  compress.h  compress_bz2.c  compress_lz4.c  compress_lzma.c  compress_lzo.c  (+117 more)
bar/bar/archive/: index1.sql  index2.sql  index3.sql  index4.sql  index6.sql
bar/bar/common/: arrays.c  arrays.h  autofree.c  autofree.h  bitmaps.c  bitmaps.h  cmdoptions.c  cmdoptions.h  configvalues.c  configvalues.h  database.c  database.h  devices.c  devices.h  dictionaries.c  dictionaries.h  files.c  files.h  filesystems.c  filesystems.h  filesystems_ext.c  filesystems_fat.c  fragmentlists.c  fragmentlists.h  global.c  global.h  lists.c  lists.h  minidump.cpp  minidump.h  misc.c  misc.h  msgqueues.c  msgqueues.h  network.c  network.h  passwords.c  passwords.h  patternlists.c  patternlists.h  (+18 more)
bar/bar/po/: Makefile.in  bar.pot  german.po  japanese.po
bar/bar/test/: Makefile.in  test.cfg
bar/bar/test/archives/: test-broken-signature.bar
bar/barcontrol/: BARControl.java  Makefile  Makefile.in  StringParser.java  TableLayoutData.java  barcontrol.bat.in  barcontrol.cfg  barcontrol.cmd.in  barcontrol.in  barcontrol.xml
bar/barcontrol/po/: barcontrol.pot  german.po  japanese.po
bar/barcontrol/src/: ArrayListCache.java  BARControl.java  BARException.java  BARServer.java  BARWidgets.java  Background.java  BackgroundTask.java  BusyDialog.java  Config.java.in  DataModel.java  Dialogs.java  Dprintf.java  Option.java  OptionEnumeration.java  OptionSpecial.java  Options.java  Pane.java  ProgressBar.java  ProgressDialog.java  Separator.java  ServerSettings.java  SettingUtils.java  Settings.java  StringParser.java  StringUtils.java  TabJobs.java  TabRestore.java  TabStatus.java  TableLayout.java  TableLayoutData.java  Widgets.java
bar/barcontrol/src/utils/: ArrayListCache.java  SettingUtils.java  StringParser.java  StringUtils.java
bar/barcontrol/src/widgets/: Dialogs.java  Pane.java  Separator.java  TableLayout.java  (+1 more)
bar/common/: arrays.c  arrays.h  autofree.c  autofree.h  bitsets.c  bitsets.h  cmdoptions.c  cmdoptions.h  configvalues.c  configvalues.h  cstrings.c  cstrings.h  database.c  database.h  devices.c  devices.h  dictionaries.c  dictionaries.h  files.c  files.h  filesystems.c  filesystems.h  filesystems_exfat.c  filesystems_exfat.h  filesystems_ext.c  filesystems_ext.h  filesystems_fat.c  filesystems_fat.h  filesystems_reiserfs.c  filesystems_reiserfs.h  filesystems_xfs.c  filesystems_xfs.h  fragmentlists.c  fragmentlists.h  global.c  global.h  hashtables.c  hashtables.h  lists.c  lists.h  (+31 more)
bar/debian/: changelog  control  rules
bar/doc/: Internal-Dataflow1.graphml  Makefile.in  README  backup-archiver.odt  bar.7  bar.odt  bar.txt  barserver-dummy.sh  faq.txt  quickstart.txt
bar/doc/images/: archivename-editor.xcf  entries.xcf  filters+mounts.xcf  images.xcf  restore-dialog.xcf  restore.xcf  schedule.xcf  scripts.xcf  server-commands.xcf  server-general.xcf  server-servers.xcf  server-verbosity+log.xcf  status.xcf  storage.xcf
bar/index/: index.c  index.h  index_assign.c  index_assign.h  index_common.c  index_common.def  index_common.h  index_current.c  index_definition.pl  index_entities.c  index_entities.h  index_entries.c  index_entries.h  index_history.c  index_history.h  index_mariadb.def  index_postgresql.def  index_sqlite3.def  index_storages.c  index_storages.h  index_uuids.c  index_uuids.h  index_version1.c  index_version2.c  index_version3.c  index_version4.c  index_version5.c  index_version6.c  index_version7.c  index_version8.c
bar/misc/: curl-7.28.1-libtool.patch  epm-4.1-rpm.patch  ftplib-3.1-without-perror.patch  libcdio-config.patch  libgcrypt-warning.patch  libssh2-0.18-keepalive.patch  pthreads-w32-2-9-1-release.patch  xdelta3-3.0.11.patch  xdelta3-3.1.0.patch  xdelta3.0.patch  xz-5.0.4-libtool.patch
bar/osc/: Makefile  changelog.pl  download-packages.sh  readme.txt
bar/po/: Makefile.in  bar.pot  german.po  japanese.po
bar/scripts/: barserver-CentOS  barserver-Fedora  barserver-Mandrake  barserver-RedHat  barserver-SuSE  barserver-debian  barserver.service  logrotate.conf
bar/ssl/certtool/: ca.tmpl  server.tmpl
bar/ssl/openssl/: server.tmpl
bar/tcl/: Makefile  pkgIndex.tcl  scanx.c  scanx_test.tcl  tclScan_ext.c  tclScanx.c
bar/tcl/mclistbox/: Makefile  pkgIndex.tcl
bar/tcl/scanx/: Makefile  Makefile.in  config.h.in  configure  scanx_test.tcl  tcl.m4  tclScanx.c
bar/test/: Makefile.in  bar-sudoers  parallel.c  test.cfg
bar/test/archive/: index3.sql  index6.sql  index7.sql
bar/test/archives/: index1.sql  index7.sql  test-BAR0-zero.bar
bar/tests/: Makefile.in  parallel.c
bar/tests/archive/: index-prev.sql  index-with-wrong-encoding.sql  index.sql  index7.sql  index8.sql
tcl/scanx/: Makefile.in  configure.in  scanx.c  tclScan_ext.c  tclScanx.c
(+170 files in other folders)
